MH3-98336: Add sama5d27-som1-ek1 support

--- a/boards/sama5d27_wlsom1_ek1.yml
+++ b/boards/sama5d27_wlsom1_ek1.yml
@@ -442,7 +442,7 @@ interfaces:
           pwm:
             pinId: PC28
             name: LCD_BACKLIGHT
-            function: LCLDC_LCDPWM
+            function: LCDC_LCDPWM
 
   - name: ISC connector interface
     description: Image Sensor Controller (ISC) configuration
