MH3-98360: Add saml10 xplained pro support

--- a/boards/saml10_xplained_pro.yml
+++ b/boards/saml10_xplained_pro.yml
@@ -47,6 +47,7 @@ interfaces:
     options:
       - name: ATECC508A
         description: ATECC508A configuration
+        dependencies: [[atecc508a, sercom1]]
         pinctrl:
           sda:
             pinId: PA16
