MH3-98408: Solve issues for SE M&M

--- a/boards/pic32cxmtsh_db.yml
+++ b/boards/pic32cxmtsh_db.yml
@@ -88,6 +88,7 @@ interfaces:
 
   - name: Debug UART interface
     description: Debugging Isolated UART interface
+    dependencies: [[sys_console, flexcom0]]
     pinctrl:
       tx:
         pinId: PA4
