MH3-98408: Solve issues on external interrupt pins of MISTRAL configuration board files

--- a/boards/pic32cxmtg_ek.yml
+++ b/boards/pic32cxmtg_ek.yml
@@ -124,6 +124,7 @@ connectors:
         name: MikroBUS_1_INT
         function: GPIO
         direction: in
+        pull down: True
         interrupt: falling edge
       uart:
         tx:
@@ -184,7 +185,7 @@ connectors:
         name: MikroBUS_2_INT
         function: GPIO
         direction: in
-        latch: low
+        pull down: True
         interrupt: falling edge
       uart:
         tx:
