--- a/boards/pic32cxmtc_db.yml
+++ b/boards/pic32cxmtc_db.yml
@@ -342,8 +342,9 @@ connectors:
         pinId: PB25
         name: EXT_IRQ
         function: GPIO
-        direction: out
-        latch: high
+        direction: in
+        pull down: True
+        interrupt: falling edge
       gpio ss:
         pinId: PB15
         name: EXT_GPIO_SS
@@ -425,8 +426,9 @@ connectors:
         pinId: PA2
         name: MikroBUS_INT
         function: GPIO
-        direction: out
-        latch: high
+        direction: in
+        pull down: True
+        interrupt: falling edge
       uart:
         tx:
           pinId: PA8
