--- a/clickBoards/pl460_ek_plc_phy.yml
+++ b/clickBoards/pl460_ek_plc_phy.yml
@@ -4,7 +4,7 @@ description: >
   which operates in the frequency band 0 .. 500kHz.
 documentation: https://www.microchip.com/en-us/development-tool/EV13L63A
 compatible: xplainpro
-dependencies: [[drvPlcPhy, spi]]
+dependencies: [[drvPlcPhy, spi], [srv_pvddmon, adc plus]]
 multiconnection: False
 supported:
   adc plus:
