MH3-109285: Set interrupt mode to Low level in Xplain Pro connectors of PIC32CXMT because it is needed for PL460-EK

--- a/boards/pic32cxmtc_db.yml
+++ b/boards/pic32cxmtc_db.yml
@@ -344,7 +344,7 @@ connectors:
         function: GPIO
         direction: in
         pull down: True
-        interrupt: falling edge
+        interrupt: Low level
       gpio ss:
         pinId: PB15
         name: EXT_GPIO_SS
