--- a/boards/pic32cxmtg_ek.yml
+++ b/boards/pic32cxmtg_ek.yml
@@ -242,7 +242,7 @@ connectors:
         function: GPIO
         direction: in
         pull down: True
-        interrupt: falling edge
+        interrupt: Low level
       gpio ss:
         pinId: PB15
         name: Xplained_Pro_GPIO_SS
