MH3-110076: Add support for LAN8840 EDS2 Daughter Card

--- a/boards/sama7d65_curiosity.yml
+++ b/boards/sama7d65_curiosity.yml
@@ -693,4 +693,4 @@ connectors:
         function: GPIO
         direction: in
         pull up: True
-        interrupt: falling edge
+        interrupt: low level
