--- a/boards/pic32mz_ef_curiosity.yml
+++ b/boards/pic32mz_ef_curiosity.yml
@@ -295,44 +295,46 @@ interfaces:
             pinId: RA14
             name: X32-1_I2C_SCL
             function: I2C1_SCL1
-      - name: SPI interface
-        description: Audio SPI interface 1
+      - name: I2S interface
+        description: Audio I2S interface 1
+        dependencies: [[a_drv_i2s, a_i2s1]]
         pinctrl:
           cs:
             pinId: RD9
-            name: X32-1_SPI1_CS
-            function: SPI1_SS1 (out)
+            name: X32-1_I2S1_CS
+            function: I2S1_SS1 (out)
           sck:
             pinId: RD1
-            name: X32-1_SPI1_SCK
-            function: SPI1_SCK1
+            name: X32-1_I2S1_SCK
+            function: I2S1_SCK1
           miso:
             pinId: RD14
-            name: X32-1_SPI1_MISO
-            function: SPI1_SDI1
+            name: X32-1_I2S1_MISO
+            function: I2S1_SDI1
           mosi:
             pinId: RD7
-            name: X32-1_SPI1_MOSI
-            function: SPI1_SDO1
-      - name: SPI interface
-        description: Audio SPI interface 2
+            name: X32-1_I2S1_MOSI
+            function: I2S1_SDO1
+      - name: I2S interface
+        description: Audio I2S interface 2
+        dependencies: [[a_drv_i2s, a_i2s2]]
         pinctrl:
           cs:
             pinId: RC2
-            name: X32-1_SPI2_CS
-            function: SPI2_SS2 (out)
+            name: X32-1_I2S2_CS
+            function: I2S2_SS2 (out)
           sck:
             pinId: RG6
-            name: X32-1_SPI2_SCK
-            function: SPI2_SCK2
+            name: X32-1_I2S2_SCK
+            function: I2S2_SCK2
           miso:
             pinId: RG7
-            name: X32-1_SPI2_MISO
-            function: SPI2_SDI2
+            name: X32-1_I2S2_MISO
+            function: I2S2_SDI2
           mosi:
             pinId: RG8
-            name: X32-1_SPI2_MOSI
-            function: SPI2_SDO2
+            name: X32-1_I2S2_MOSI
+            function: I2S2_SDO2
       - name: X32 StandBy / Reset
         description: StandBy / Reset control signal
         pinctrl:
@@ -383,44 +385,46 @@ interfaces:
             pinId: RA14
             name: X32-2_I2C_SCL
             function: I2C1_SCL1
-      - name: SPI interface
-        description: Audio SPI interface 1
+      - name: I2S interface
+        description: Audio I2S interface 1
+        dependencies: [[a_drv_i2s, a_i2s2]]
         pinctrl:
           cs:
             pinId: RC2
-            name: X32-2_SPI1_CS
-            function: SPI2_SS2 (out)
+            name: X32-2_I2S1_CS
+            function: I2S2_SS2 (out)
           sck:
             pinId: RG6
-            name: X32-2_SPI1_SCK
-            function: SPI2_SCK2
+            name: X32-2_I2S1_SCK
+            function: I2S2_SCK2
           miso:
             pinId: RG7
-            name: X32-2_SPI1_MISO
-            function: SPI2_SDI2
+            name: X32-2_I2S1_MISO
+            function: I2S2_SDI2
           mosi:
             pinId: RG8
-            name: X32-2_SPI1_MOSI
-            function: SPI2_SDO2
-      - name: SPI interface
-        description: Audio SPI interface 2
+            name: X32-2_I2S1_MOSI
+            function: I2S2_SDO2
+      - name: I2S interface
+        description: Audio I2S interface 2
+        dependencies: [[a_drv_i2s, a_i2s1]]
         pinctrl:
           cs:
             pinId: RD9
-            name: X32-2_SPI2_CS
-            function: SPI1_SS1 (out)
+            name: X32-2_I2S2_CS
+            function: I2S1_SS1 (out)
           sck:
             pinId: RD1
-            name: X32-2_SPI2_SCK
-            function: SPI1_SCK1
+            name: X32-2_I2S2_SCK
+            function: I2S1_SCK1
           miso:
             pinId: RD14
-            name: X32-2_SPI2_MISO
-            function: SPI1_SDI1
+            name: X32-2_I2S2_MISO
+            function: I2S1_SDI1
           mosi:
             pinId: RD7
-            name: X32-2_SPI2_MOSI
-            function: SPI1_SDO1
+            name: X32-2_I2S2_MOSI
+            function: I2S1_SDO1
       - name: X32 StandBy / Reset
         description: StandBy / Reset control signal
         pinctrl:
